--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -1,6 +1,7 @@
 yoast_seo:
   version: 1.x
   js:
+    js/js-text-analysis/yoast-seo.min.js: {}
     js/yoast_seo.js: {}
   dependencies:
     - core/jquery
