--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -3,5 +3,10 @@ yoast_seo:
   js:
     js/js-text-analysis/yoast-seo.min.js: {}
     js/yoast_seo.js: {}
+    js/yoast_seo_status_widget.js: {}
+    js/yoast_seo_form.js: {}
   dependencies:
     - core/jquery
+    - core/backbone
+    - ckeditor/drupal.ckeditor
+    - ckeditor/drupal.ckeditor.admin
