Replace tokens by their relative values (local tokens for now)

--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -8,6 +8,7 @@ yoast_seo:
   dependencies:
     - core/jquery
     - core/backbone
+    - core/underscore
     - ckeditor/drupal.ckeditor
     - ckeditor/drupal.ckeditor.admin
     - core/drupalSettings
