--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -5,6 +5,7 @@ yoast_seo:
     js/yoast_seo.js: {}
     js/yoast_seo_status_widget.js: {}
     js/yoast_seo_form.js: {}
+    js/yoast_seo_data.js: {}
   dependencies:
     - core/jquery
     - core/backbone
@@ -12,3 +13,6 @@ yoast_seo:
     - ckeditor/drupal.ckeditor
     - ckeditor/drupal.ckeditor.admin
     - core/drupalSettings
+  css:
+    theme:
+      css/yoast_seo.css: {}
