--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -16,3 +16,8 @@ yoast_seo:
   css:
     theme:
       css/yoast_seo.css: {}
+yoast_seo_view:
+  version: 1.x
+  css:
+      theme:
+        css/yoast_seo.css: {}
