--- a/yoast_seo.services.yml
+++ b/yoast_seo.services.yml
@@ -1,7 +1,7 @@
 services:
   yoast_seo.manager:
     class: Drupal\yoast_seo\YoastSeoManager
-    arguments: []
+    arguments: ['@module_handler']
   yoast_seo.field_manager:
     class: Drupal\yoast_seo\YoastSeoFieldManager
     arguments: []
