--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -4,11 +4,12 @@ yoast_seo_base_style:
       theme:
         css/yoast_seo.css: {}
         css/yoast_seo_score.css: {}
-yoast_seo_base_scripts:
+yoast_seo_core:
   version: 1.x
   js:
     js/lib/yoast/yoast-seo.min.js: {}
-    js/yoast_seo_status_widget.js: {}
+    js/inc/model/status.js: {}
+    js/inc/yoast_analyser.js: {}
   dependencies:
       - core/jquery
       - core/drupalSettings
@@ -20,7 +21,6 @@ yoast_seo.edit_node:
     js/inc/widget/status.js: {}
     js/inc/widget/focus_keyword.js: {}
     js/inc/form/snippet_element.js: {}
-    js/inc/yoast_analyser.js: {}
     js/inc/yoast_analyser_edit_node.js: {}
     js/yoast_seo.edit_node.js: {}
   dependencies:
@@ -30,6 +30,7 @@ yoast_seo.edit_node:
     - ckeditor/drupal.ckeditor
     - ckeditor/drupal.ckeditor.admin
     - core/drupalSettings
+    - yoast_seo/yoast_seo_core
   css:
     theme:
       css/yoast_seo.css: {}
