--- a/config/yoast_seo.yml
+++ b/config/yoast_seo.yml
@@ -1,7 +1,13 @@
 score_to_status_rules:
-  0: na
-  3: bad
-  5: poor
-  7: ok
-  10: good
+  na:
+    equal: 0
+  bad:
+    min: 0
+    max: 4
+  ok:
+    min: 4
+    max: 7
+  good:
+    min: 7
+    max: 10
   default: bad
