--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -1,47 +1,33 @@
 yoast_seo_base_style:
   version: 1.x
   css:
-      theme:
-        css/yoast_seo.css: {}
-        css/yoast_seo_score.css: {}
-yoast_seo_core:
-  version: 1.x
-  js:
-    js/lib/yoast/yoast-seo.min.js: {}
-    js/inc/model/status.js: {}
-    js/inc/yoast_analyser.js: {}
-  dependencies:
-      - core/jquery
-      - core/drupalSettings
-yoast_seo.edit_node:
-  version: 1.x
-  js:
-    js/lib/backbone_form/form.js: {}
-    js/inc/widget/focus_keyword.js: {}
-    js/inc/widget/status.js: {}
-    js/inc/form/snippet_element.js: {}
-    js/inc/yoast_analyser_edit_node.js: {}
-    js/yoast_seo.edit_node.js: {}
-  dependencies:
-    - core/jquery
-    - core/jquery.ui.tooltip
-    - core/backbone
-    - core/underscore
-    - ckeditor/drupal.ckeditor.admin
-    - core/drupalSettings
-    - yoast_seo/yoast_seo_core
-  css:
     theme:
       css/yoast_seo.css: {}
       css/yoast_seo_score.css: {}
+
+yoast_seo_core:
+  version: 1.x
+  js:
+    js/js-text-analysis/yoast-seo.min.js: {}
+    js/yoast_seo.js: {}
+  dependencies:
+      - core/jquery
+      - core/jquery.once
+      - core/drupal
+      - core/drupalSettings
+      - ckeditor/drupal.ckeditor.admin
+  css:
+    theme:
+      css/yoast_seo.css: {}
+
 yoast_seo_admin:
   version: 1.x
   css:
-      theme:
-        css/yoast_seo.message.css: {}
+    theme:
+      css/yoast_seo.message.css: {}
+
 yoast_seo_view:
   version: 1.x
   css:
-      theme:
-        css/yoast_seo.css: {}
-        css/yoast_seo_score.css: {}
+    theme:
+      css/yoast_seo.css: {}
