--- a/yoast_seo.links.menu.yml
+++ b/yoast_seo.links.menu.yml
@@ -1,6 +1,6 @@
 yoast_seo.admin:
-  title: 'Yoast SEO Admin Settings'
-  description: 'Configure Yoast SEO for Drupal settings'
+  title: 'Realtime SEO Admin Settings'
+  description: 'Configure Realtime SEO for Drupal settings'
   parent: system.admin_config_development
   route_name: yoast_seo.settings
   weight: 100
