--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "drupal/yoast_seo",
-    "description": "Adds Yoast SEO page analysis and configuration.",
+    "description": "Adds Real-time SEO page analysis and configuration.",
     "type": "drupal-module",
     "license": "GPL-2.0+"
 }
