--- a/yoast_seo.routing.yml
+++ b/yoast_seo.routing.yml
@@ -2,14 +2,14 @@ yoast_seo.tokens:
   path: '/yoast_seo/tokens'
   defaults:
     _controller: '\Drupal\yoast_seo\Controller\YoastSeoController::tokens'
-    _title: 'Realtime SEO tokens'
+    _title: 'Real-time SEO tokens'
   requirements:
     _permission: 'use yoast seo'
 
 yoast_seo.settings:
   path: 'admin/config/yoast_seo'
   defaults:
-    _title: 'Realtime SEO settings'
+    _title: 'Real-time SEO settings'
     _controller: '\Drupal\yoast_seo\Controller\YoastSeoController::settings'
   requirements:
     _permission: 'administer yoast seo'
