--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -8,7 +8,6 @@ yoast_seo_base_style:
 yoast_seo_core:
   version: 1.x
   js:
-    js/js-text-analysis/yoast-seo.min.js: {}
     js/yoast_seo.js: {}
   dependencies:
       - core/jquery
@@ -16,6 +15,7 @@ yoast_seo_core:
       - core/drupal
       - core/drupalSettings
       - ckeditor/drupal.ckeditor.admin
+      - yoast_seo/analytics_core
   css:
     theme:
       css/yoast_seo.css: {}
@@ -31,3 +31,16 @@ yoast_seo_view:
   css:
     theme:
       css/yoast_seo.css: {}
+
+analytics_core:
+  remote: https://github.com/goalgorilla/YoastSEO.js
+  version: 1.2.2
+  license:
+    name: GPL-3.0
+    url: https://github.com/goalgorilla/YoastSEO.js/blob/master/LICENSE
+    gpl-compatible: true
+  js:
+    /libraries/YoastSEO.js/dist/rtseo.js: {}
+  css:
+    theme:
+      /libraries/YoastSEO.js/dist/yoast-seo.min.css: {}
