WIP: Proof of concept of entity previewer
This properly gets a request through javascript and then is able
to create an updated version of an entity with those values.

It only fails on validation of subfields. When a subfield is
required but its parent is optional then the subfield needn't be
filled if the parent field isn't filled. However in this case an
error is still triggered.

--- a/yoast_seo.routing.yml
+++ b/yoast_seo.routing.yml
@@ -13,3 +13,13 @@ yoast_seo.settings:
     _controller: '\Drupal\yoast_seo\Controller\YoastSeoController::settings'
   requirements:
     _permission: 'administer yoast seo'
+
+yoast_seo.entity_preview:
+  path: '/yoast_seo/preview'
+  defaults:
+    _title: 'Entity Preview'
+    _controller: '\Drupal\yoast_seo\Controller\EntityPreviewController::json'
+  methods: ['POST']
+# TODO: Implement proper access checking here based on the entity
+  requirements:
+    _access: 'TRUE'
