--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -12,6 +12,7 @@ yoast_seo_core:
   dependencies:
       - core/jquery
       - core/jquery.once
+      - core/jquery.form
       - core/drupal
       - core/drupalSettings
       - ckeditor/drupal.ckeditor.admin
