--- a/yoast_seo.routing.yml
+++ b/yoast_seo.routing.yml
@@ -1,16 +1,8 @@
-yoast_seo.tokens:
-  path: '/yoast_seo/tokens'
-  defaults:
-    _controller: '\Drupal\yoast_seo\Controller\YoastSeoController::tokens'
-    _title: 'Real-time SEO tokens'
-  requirements:
-    _permission: 'use yoast seo'
-
 yoast_seo.settings:
   path: 'admin/config/yoast_seo'
   defaults:
     _title: 'Real-time SEO'
-    _controller: '\Drupal\yoast_seo\Controller\YoastSeoController::settings'
+    _controller: '\Drupal\yoast_seo\Controller\SettingsController::index'
   requirements:
     _permission: 'administer yoast seo'
 
