--- a/yoast_seo.services.yml
+++ b/yoast_seo.services.yml
@@ -1,7 +1,7 @@
 services:
   yoast_seo.manager:
-    class: Drupal\yoast_seo\YoastSeoManager
-    arguments: ['@module_handler']
+    class: Drupal\yoast_seo\SeoManager
+    arguments: ['@yoast_seo.field_manager', '@entity_type.bundle.info']
   yoast_seo.field_manager:
     class: Drupal\yoast_seo\FieldManager
     arguments: []
