--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,15 @@
     "name": "drupal/yoast_seo",
     "description": "Adds Real-time SEO page analysis and configuration.",
     "type": "drupal-module",
-    "license": "GPL-2.0+"
+    "license": "GPL-2.0+",
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        }
+    ],
+    "require": {
+        "drupal/metatag": "^1.3",
+        "goalgorilla/rtseo.js": "^2.0"
+    }
 }
