by Kingdutch: Implement access control for entity preview
We now check whether the user can use the Real Time SEO module and
whether the user has at least view rights for the module. This way
we aren't able to leak data to the entire world.

--- a/yoast_seo.routing.yml
+++ b/yoast_seo.routing.yml
@@ -14,4 +14,4 @@ yoast_seo.entity_preview:
   methods: ['POST']
 # TODO: Implement proper access checking here based on the entity
   requirements:
-    _access: 'TRUE'
+    _custom_access: '\Drupal\yoast_seo\Controller\EntityPreviewController::access'
