--- a/yoast_seo.services.yml
+++ b/yoast_seo.services.yml
@@ -1,10 +1,10 @@
 services:
   yoast_seo.manager:
     class: Drupal\yoast_seo\SeoManager
-    arguments: ['@yoast_seo.field_manager', '@entity_type.bundle.info']
+    arguments: ['@yoast_seo.field_manager', '@entity_type.bundle.info', '@entity_type.manager']
   yoast_seo.field_manager:
     class: Drupal\yoast_seo\FieldManager
     arguments: []
-  yoast_seo.entity_previewer:
-    class: Drupal\yoast_seo\EntityPreviewer
+  yoast_seo.entity_analyser:
+    class: Drupal\yoast_seo\EntityAnalyser
     arguments: ['@entity_type.manager', '@renderer', '@metatag.manager', '@router.no_access_checks']
