--- a/yoast_seo.libraries.yml
+++ b/yoast_seo.libraries.yml
@@ -24,6 +24,7 @@ yoast_seo_admin:
   version: 1.x
   css:
     theme:
+      css/yoast_seo.config.css: {}
       css/yoast_seo.message.css: {}
 
 yoast_seo_view:
