--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "drupal/core": "^8.5",
         "drupal/metatag": "^1.3",
         "goalgorilla/rtseo.js": "^2.0"
     }
